azure/tf/modules/virtual_network/subnets.tf
# Create workspace subnets (container, host) - only when create=true (spokes); hub sets create=false
resource "azurerm_subnet" "workspace_subnets" {
  for_each = var.workspace_subnets.create ? local.workspace_subnets : toset([])

  name                 = "${module.naming.subnet.name}-${each.key}"
  resource_group_name  = azurerm_virtual_network.this.resource_group_name
  virtual_network_name = azurerm_virtual_network.this.name

  address_prefixes = [module.subnet_addrs.network_cidr_blocks[each.key]]

  delegation {
    name = "databricks-container-subnet-delegation"

    service_delegation {
      name = "Microsoft.Databricks/workspaces"
      actions = [
        "Microsoft.Network/virtualNetworks/subnets/join/action",
        "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
        "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action",
      ]
    }
  }
}

resource "azurerm_subnet_network_security_group_association" "workspace_subnets" {
  for_each = var.workspace_subnets.create ? local.workspace_subnets : toset([])

  subnet_id                 = azurerm_subnet.workspace_subnets[each.key].id
  network_security_group_id = azurerm_network_security_group.this.id
}

# Associate the route table with the host subnet
resource "azurerm_subnet_route_table_association" "workspace_subnets" {
  for_each = var.workspace_subnets.create ? local.workspace_subnets : toset([])

  subnet_id      = azurerm_subnet.workspace_subnets[each.key].id
  route_table_id = var.route_table_id
}

resource "azurerm_ip_group_cidr" "workspace_subnet_host" {
  count = var.workspace_subnets.create && var.workspace_subnets.add_to_ip_group ? 1 : 0

  ip_group_id = var.ipgroup_id
  cidr        = azurerm_subnet.workspace_subnets["host"].address_prefixes[0]
}

resource "azurerm_ip_group_cidr" "workspace_subnet_container" {
  count = var.workspace_subnets.create && var.workspace_subnets.add_to_ip_group ? 1 : 0

  ip_group_id = var.ipgroup_id
  cidr        = azurerm_subnet.workspace_subnets["container"].address_prefixes[0]
}

# Create the privatelink subnet
resource "azurerm_subnet" "privatelink" {
  name                 = "${module.naming.subnet.name}-pl"
  resource_group_name  = azurerm_virtual_network.this.resource_group_name
  virtual_network_name = azurerm_virtual_network.this.name

  address_prefixes = [module.subnet_addrs.network_cidr_blocks["privatelink"]]
}

# Create any extra subnets
resource "azurerm_subnet" "extra" {
  for_each = var.extra_subnets

  name                 = each.value.name
  resource_group_name  = azurerm_virtual_network.this.resource_group_name
  virtual_network_name = azurerm_virtual_network.this.name
  address_prefixes     = [module.subnet_addrs.network_cidr_blocks[each.value.name]]
}
